Add APIPublicaCifra Toolbox

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -225,26 +225,8 @@ en:
           description: "for a weekend getaway in a mountainous region"
         - title: "Compose a short biography of Matz"
           description: "focusing on his philosophy behind creating Ruby"
-        - title: "Help me pick"
-          description: "an outfit that will look good on camera"
-        - title: "Create a personal webpage for me"
-          description: "after asking me three questions"
-        - title: "Recommend activities"
-          description: "for a team-building day with remote employees"
-        - title: "Write a SQL query"
-          description: "that adds a 'status' column to an 'orders' table"
-        - title: "Explain the significance of quantum computing"
-          description: "in addressing complex problems"
-        - title: "Create a weekly newsletter template"
-          description: "for a gardening club"
-        - title: "Recommend traditional Bavarian dishes"
-          description: "and where to find them in Munich"
-        - title: "Craft a clever invitation"
-          description: "for an engineering book club"
-        - title: "Write a survival guide"
-          description: "for making it through a day with no coffee"
-        - title: "Help me plan"
-          description: "a roadtrip from Charleston to Key West"
+        - title: "Inicia sesión"
+          description: "en la API pública de Cifra"
     flashes:
       auth:
         invalid_login: "Invalid email or password"
